tests/NormalTests/paczka2/big_fuzzy/48499114.err
Error in line 3: YwLNN8dS S944 38,2
Error in line 13: uXPPsP3cPpm S98 17,2
Error in line 27: pD7x S98 ]3,8
Error in line 33: uXPPsP3cPpm A249 1,3
Error in line 46: AjdYgKjE6y A572 63,0
Error in line 28: pD7x S98 71,4
Error in line 49: 0w4HUG6yC S944 48,9
Error in line 58: pD7x A572 28,8
Error in line 62: qOq0K9Ik2L S98 36,5
Error in line 59: 0w4HUG6yC A572 9,0
Error in line 71: A572 S944 45,2
Error in line 84: YwLNN8dS A249 10,8
Error in line 90: YwLNN8dS A572 71,3
Error in line 93: YwLNN8dS A249 69,7
Error in line 97: A572 A249 14,2
Error in line 100: A572 S98 71,5
Error in line 80: uXPPsP3cPpm S98 25,0
Error in line 126: uXPPsP3cPpm S944 8,7
Error in line 118: pD7x A572 65,2
Error in line 119: qOq0K9Ik2L A572 60,6
Error in line 144: pD7x A572 5,01
Error in line 152: pD7x A572 2,9
Error in line 165: uXPPsP3cPpm S944 14,7
Error in line 173: qOq0K9Ik2L A572 98,8
Error in line 175: AjdYgKjE6y S98 23,1
Error in line 176: YwLNN8dS A249 92,8
Error in line 185: pD7x A572 79,0
Error in line 189: A57  S944  1, 
Error in line 190: A572 S944 92,6
Error in line 196: A572 A249 56,3
Error in line 201: uXPPsP3cPpm A572 77,5
Error in line 213: AjdYgKjE6y A249 54,5
Error in line 214: AjdYgKjE6y S98 52,6
Error in line 215: AjdYgKjE6y A249 82,9
Error in line 217: AjdYgKjE6y S98 86,3
Error in line 226: qOq0K9Ik2L A572 79,3
Error in line 230: pD7x A572 33,0
Error in line 241: qOq0K9Ik2L A249 46,4
